refactor: bookmark 서비스 user 기반 구조로 통합, 기존 db 패키지 코드 삭제